<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/newsImage"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:src="#000"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/news_image"/>

                <TextView
                    android:id="@+id/newsSource"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_source"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:id="@+id/newsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:id="@+id/newsDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_description"
                    android:textSize="16sp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:layout_marginTop="3dp"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>